--- a/server/index.html
+++ b/server/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     hn hoti h
-    <a href="./client/dist/index.html"></a>
+    <a href="./client/dist/index.html">go</a>
 </body>
 </html>
